--- a/web02/custom/login.html
+++ b/web02/custom/login.html
@@ -76,8 +76,8 @@
                         <div class="header__top__right">
                             <div class="header__top__links">
                                 <!-- 비로그인상태 -->
-                                <a href="./custom/login.html">로그인</a>
-                                <a href="./custom/membership.html">회원가입</a>
+                                <a href="./login.html">로그인</a>
+                                <a href="./membership.html">회원가입</a>
                                 <a href="../admin/index.html">관리자 페이지</a>
                             </div>
                         </div>
@@ -89,7 +89,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-3">
                     <div class="header__logo">
-                        <a href="./index.html"><img src="./img1/header/logo.png" alt="logo"></a>
+                        <a href="./index.html"><img src="../img1/header/logo.png" alt="logo"></a>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
@@ -124,8 +124,8 @@
                 </div>
                 <div class="col-lg-3 col-md-3">
                     <div class="header__nav__option">
-                        <a href="#" class="search-switch"><img src="./img1/header/icon_search_black.png" alt="검색"></a>
-                        <a href="./custom/GetMemberCartListCtrl.html" class="cart-switch"><img src="./img1/header/icon_cart_black.png" alt="장바구니"><span></span></a>
+                        <a href="#" class="search-switch"><img src="../img1/header/icon_search_black.png" alt="검색"></a>
+                        <a href="./GetMemberCartListCtrl.html" class="cart-switch"><img src="../img1/header/icon_cart_black.png" alt="장바구니"><span></span></a>
                     </div>
                 </div>
             </div>
