--- a/web02/custom/membership.html
+++ b/web02/custom/membership.html
@@ -82,8 +82,8 @@
                         <div class="header__top__right">
                             <div class="header__top__links">
                                 <!-- 비로그인상태 -->
-                                <a href="./custom/login.html">로그인</a>
-                                <a href="./custom/membership.html">회원가입</a>
+                                <a href="./login.html">로그인</a>
+                                <a href="./membership.html">회원가입</a>
                                 <a href="../admin/index.html">관리자 페이지</a>
                             </div>
                         </div>
@@ -95,34 +95,34 @@
             <div class="row">
                 <div class="col-lg-3 col-md-3">
                     <div class="header__logo">
-                        <a href="./index.html"><img src="./img1/header/logo.png" alt="logo"></a>
+                        <a href="./index.html"><img src="../img1/header/logo.png" alt="logo"></a>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
                     <nav class="header__menu mobile-menu">
                         <ul>
-                            <li><a href="./product/GetProductItemListCtrlcateNo1.html">베스트</a>
+                            <li><a href="../product/GetProductItemListCtrlcateNo1.html">베스트</a>
                                 <ul class="dropdown">
-                                    <li><a href="./product/GetProductItemListCtrlcateNo1.html">베스트</a></li>
-                                    <li><a href="./product/GetProductItemListCtrlcateNo2.html">위클리 베스트</a></li>
+                                    <li><a href="../product/GetProductItemListCtrlcateNo1.html">베스트</a></li>
+                                    <li><a href="../product/GetProductItemListCtrlcateNo2.html">위클리 베스트</a></li>
                                 </ul>
                             </li>
-                            <li><a href="./product/GetProductItemListCtrl?cateNo3.html">티 제품</a>
+                            <li><a href="../product/GetProductItemListCtrl?cateNo3.html">티 제품</a>
                                 <ul class="dropdown">
-                                    <li><a href="./product/GetProductItemListCtrlcateNo3.html">티푸드</a></li>
-                                    <li><a href="./product/GetProductItemListCtrlcateNo4.html">라이프 스타일</a></li>
+                                    <li><a href="../product/GetProductItemListCtrlcateNo3.html">티푸드</a></li>
+                                    <li><a href="../product/GetProductItemListCtrlcateNo4.html">라이프 스타일</a></li>
                                 </ul>
                             </li>
-                            <li><a href=".dada/subscribe.html">다다일상</a>
+                            <li><a href="../dada/subscribe.html">다다일상</a>
                                 <ul class="dropdown">
-                                    <li><a href="./dada/subscribe.html">다다일상 구독</a></li>
-                                    <li><a href="./dada/recode.html">다다일상 기록</a></li>
+                                    <li><a href="../dada/subscribe.html">다다일상 구독</a></li>
+                                    <li><a href="../dada/recode.html">다다일상 기록</a></li>
                                 </ul>
                             </li>
-                            <li><a href="./GetBoardListCtrl.html">고객센터</a>
+                            <li><a href="../GetBoardListCtrl.html">고객센터</a>
                                 <ul class="dropdown">
-                                    <li><a href="./GetBoardListCtrl.html">공지사항</a></li>
-                                    <li><a href="./GetQnaListCtrl.html">QnA</a></li>
+                                    <li><a href="../GetBoardListCtrl.html">공지사항</a></li>
+                                    <li><a href="../GetQnaListCtrl.html">QnA</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -130,8 +130,8 @@
                 </div>
                 <div class="col-lg-3 col-md-3">
                     <div class="header__nav__option">
-                        <a href="#" class="search-switch"><img src="./img1/header/icon_search_black.png" alt="검색"></a>
-                        <a href="./custom/GetMemberCartListCtrl.html" class="cart-switch"><img src="./img1/header/icon_cart_black.png" alt="장바구니"><span></span></a>
+                        <a href="#" class="search-switch"><img src="../img1/header/icon_search_black.png" alt="검색"></a>
+                        <a href="./GetMemberCartListCtrl.html" class="cart-switch"><img src="../img1/header/icon_cart_black.png" alt="장바구니"><span></span></a>
                     </div>
                 </div>
             </div>
