--- a/web02/index.html
+++ b/web02/index.html
@@ -145,7 +145,7 @@
                                 <h6>가을 단풍을 닮은 깊고 그윽한 발효차 </h6>
                                 <h3>가을을 닮아<br>깊고 그윽한 순수 발효차, <br>블렌디드 티 추천해드려요.</h3><br>
                                 <p>10.24 - 11.07</p>
-                                <a href="./GetProductItemListCtrlcateNo1.html" class="primary-btn">자세히 보기 <span class="arrow_right"></span></a>
+                                <a href="./product/GetProductItemListCtrlcateNo1.html" class="primary-btn">자세히 보기 <span class="arrow_right"></span></a>
                             </div>
                         </div>
                     </div>
@@ -159,7 +159,7 @@
                                 <h6>토스로 생애 첫 결제 시 <br>3천 원 즉시 캐시백</h6>
                                 <h3>지금 토스로 1만 원 이상 결제하면<br>3천 원을 돌려드려요.</h3><br>
                                 <p>10.24 - 02.28</p>
-                                <a href="GetProductItemListCtrl?cateNo3.html" class="primary-btn">자세히 보기<span class="arrow_right"></span></a>
+                                <a href="./product/GetProductItemListCtrlcateNo3.html" class="primary-btn">자세히 보기<span class="arrow_right"></span></a>
                             </div>
                         </div>
                     </div>
@@ -173,7 +173,7 @@
                                 <h6>다다일상 홈카페<br>체험권 증정</h6>
                                 <h3>VIP, VVIP 고객 대상 멤버쉽 혜택<br>지금 다다일상 홈카페를 경험해보세요.</h3><br>
                                 <p>07.20 - 12.31</p>
-                                <a href=".dada/subscribe.html" class="primary-btn">Shop now <span class="arrow_right"></span></a>
+                                <a href="./dada/subscribe.html" class="primary-btn">Shop now <span class="arrow_right"></span></a>
                             </div>
                         </div>
                     </div>
