web02 admin page

--- a/web02/index.html
+++ b/web02/index.html
@@ -116,7 +116,7 @@
                             <li><a href="./GetBoardListCtrl.html">고객센터</a>
                                 <ul class="dropdown">
                                     <li><a href="./GetBoardListCtrl.html">공지사항</a></li>
-                                    <li><a href="./GetQnaListCtrl.html">QnA</a></li>
+                                    <li><a href="./admin/GetQnaListCtrl.html">QnA</a></li>
                                 </ul>
                             </li>
                         </ul>
