--- a/web02/admin/GetQnaListCtrl.html
+++ b/web02/admin/GetQnaListCtrl.html
@@ -1,6 +1,3 @@
-
-
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -30,34 +27,25 @@
     <meta property="og:description" content="오설록, 차와 제주가 선사하는 가치 있는 쉼" />
     <meta property="og:url" content="https://www.osulloc.com/">
 
-
-
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700;800;900&display=swap"
         rel="stylesheet">
 
     <!-- Css Styles -->
     <!-- 절대경로로 설정해야 ctrl을 거치고 나서 정상출력 -->
-    <link rel="stylesheet" href="/pro002/css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="/pro002/css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="/pro002/css/elegant-icons.css" type="text/css">
-    <link rel="stylesheet" href="/pro002/css/magnific-popup.css" type="text/css">
-    <link rel="stylesheet" href="/pro002/css/nice-select.css" type="text/css">
-    <link rel="stylesheet" href="/pro002/css/owl.carousel.min.css" type="text/css">
-    <link rel="stylesheet" href="/pro002/css/slicknav.min.css" type="text/css">
-    <link rel="stylesheet" href="/pro002/css/style.css" type="text/css">
-
-    <link rel="stylesheet" href="../common.css">
-
+    <link rel="stylesheet" href="../css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="../css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="../css/elegant-icons.css" type="text/css">
+    <link rel="stylesheet" href="../css/magnific-popup.css" type="text/css">
+    <link rel="stylesheet" href="../css/nice-select.css" type="text/css">
+    <link rel="stylesheet" href="../css/owl.carousel.min.css" type="text/css">
+    <link rel="stylesheet" href="../css/slicknav.min.css" type="text/css">
+    <link rel="stylesheet" href="../css/style.css" type="text/css">
 
 <style>
 .title { padding-top:36px; padding-bottom:20px; }
 </style>
 </head>
-<body>
- 
-
-
 <body>
     <!-- Page Preloder -->
     <div id="preloder">
@@ -78,7 +66,7 @@
                             <div class="header__top__links">
                             <!-- 일반 회원 로그인 시 -->
                             
-                                <span class="nav-link">이하영님</span>
+                                <span class="nav-link">관리자님</span>
                                 <a href="/pro002/LogOutCtrl">로그아웃</a>
                                 <a href="/pro002/GetCustomInfoCtrl">회원정보</a>
                                 <!--관리자 로그인 시-->
@@ -97,7 +85,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-3">
                     <div class="header__logo">
-                        <a href="/pro002/index.jsp"><img src="/pro002/img1/header/logo.png" alt=""></a>
+                        <a href="../index.html"><img src="../img1/header/logo.png" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
@@ -132,8 +120,8 @@
                 </div>
                 <div class="col-lg-3 col-md-3">
                     <div class="header__nav__option">
-                        <a href="#" class="search-switch"><img src="/pro002/img1/header/icon_search_black.png" alt=""></a>
-                        <a href="/pro002/GetMemberCartListCtrl"><img src="/pro002/img1/header/icon_cart_black.png" alt=""> <span></span></a>
+                        <a href="#" class="search-switch"><img src="../img1/header/icon_search_black.png" alt=""></a>
+                        <a href="../custom/GetMemberCartListCtrl.html"><img src="../img1/header/icon_cart_black.png" alt=""> <span></span></a>
                     </div>
                 </div>
             </div>
@@ -144,7 +132,7 @@
 
 <div class="container-fluid" id="content">
 	<div class="row" id="content_row">
-		
+	
 		
     <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
 		<div class="sidebar-sticky pt-3">
@@ -156,44 +144,44 @@
 		       </a>
 		     </li>
 		     <li class="nav-item">
-		       <a class="nav-link" href="/pro002/GetCustomListCtrl">
+		       <a class="nav-link" href="./GetCustomListCtrl.html">
 		         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file"><path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path><polyline points="13 2 13 9 20 9"></polyline></svg>
 		         	회원관리
 		       </a>
 		     </li>
 		     <li class="nav-item">
-		       <a class="nav-link" href="/pro002/GetBoardListCtrl">
+		       <a class="nav-link" href="../GetBoardListCtrl.html">
 		         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shopping-cart"><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg>
 		         	게시판 관리
 		       </a>
 		     </li>
 		     <li class="nav-item">
-		       <a class="nav-link" href="/pro002/GetQnaListCtrl.do">
+		       <a class="nav-link" href="./GetQnaListCtrl.html">
 		         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-users"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg>
 		         	질문 및 답변 관리
 		       </a>
 		     </li>		     
 		     <li class="nav-item">
-		       <a class="nav-link" href="/pro002/GetProductListCtrl">
+		       <a class="nav-link" href="./GetProductListCtrl.html">
 		         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart-2"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
 		         	제품관리
 		       </a>
 		     </li>
 		     <li class="nav-item">
-		       <a class="nav-link" href="/pro002/GetAdminSalesListCtrl">
+		       <a class="nav-link" href="./GetAdminSalesListCtrl.html">
 		         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart-2"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
 		         	판매관리
 		       </a>
 		     </li>
 		     <li class="nav-item">
-		       <a class="nav-link" href="/pro002/GetAdminParselListCtrl">
+		       <a class="nav-link" href="./GetAdminParselListCtrl.html">
 		         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-layers"><polygon points="12 2 2 7 12 12 22 7 12 2"></polygon><polyline points="2 17 12 22 22 17"></polyline><polyline points="2 12 12 17 22 12"></polyline></svg>
 		         	배송관리
 		       </a>
 		     </li>
 		   </ul>
 		 </div>
-     </nav>
+    </nav>
 		
 		
 		<main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
