web02 admin page

--- a/web02/index.html
+++ b/web02/index.html
@@ -78,7 +78,7 @@
                                 <!-- 비로그인상태 -->
                                 <a href="./custom/login.html">로그인</a>
                                 <a href="./custom/membership.html">회원가입</a>
-                                <a href="../admin/index.html">관리자 페이지</a>
+                                <a href="./admin/index.html">관리자 페이지</a>
                             </div>
                         </div>
                     </div>
