web02 admin page

--- a/web02/admin/GetProductListCtrl.html
+++ b/web02/admin/GetProductListCtrl.html
@@ -44,6 +44,19 @@
 
     .title {  padding-top: 36px; padding-bottom: 20px; }
 
+    /* productList */
+    ul, li { list-style: none; }
+    .spad { display: block; text-align: center; padding-top: 0; }
+    .title { padding-top: 36px; padding-bottom: 20px; }
+    #best li { max-width: 25%; }
+    .card-heading a { text-align: left; }
+    .card { border: none; }
+    .card-img-top { border-radius: 0px; }
+    .card-body { text-align: left; padding-left: 0px; }
+    .card-body h6 { line-height: 20px; text-decoration: underline; color: #555; letter-spacing: -1px; }
+    .card-body p { line-height: 8px; letter-spacing: -1px; }
+    .card-text { font-size: 18px; font-weight: bolder; }
+
     /* footer */
     .footer-row { margin: 30px auto; }
     .footer__widget { margin: 0; float: right; }
@@ -172,8 +185,145 @@
                 <div class="col-lg-9">
                     <div class="row">
                     <!-- 상품 반복 -->
-                    
+                    <ul class="row" id="best">
+                        <li class="col-lg-4">
+                            <div class="card">
+                                <img src="../img1/main/content/page1/best/01_collection_thumb_hover.png" class="card-img-top" alt="product1">
+                                <div class="card-body">
+                                    <h6 class="card-title">프리미엄 티 컬렉션</h6>
+                                    <p style="color: #ccc;"><del>28,000원</del></p>
+                                    <p class="card-text">22,400원</p>
+                                    <a href="./GetProductDetailCtrlproNo1.html" class="btn btn-light">제품 상세보기</a>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="col-lg-4">
+                            <div class="card">
+                                <img src="../img1/main/content/page1/best/02_lovely_thumb_hover.png" class="card-img-top" alt="product2">
+                                <div class="card-body">
+                                    <h6 class="card-title">러블리 티 박스</h6>
+                                    <p class="card-text">20,000원</p>
+                                    <a href="./GetProductDetailCtrlproNo2.html" class="btn btn-light">제품 상세보기</a>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="col-lg-4">
+                            <div class="card">
+                                <img src="../img1/main/content/page1/best/03_secret_thumb_hover.png" class="card-img-top" alt="product3">
+                                <div class="card-body">
+                                    <h6 class="card-title">시크릿 티 스토리</h6>
+                                    <p class="card-text">45,000원</p>
+                                    <a href="./GetProductDetailCtrlproNo3.html" class="btn btn-light">제품 상세보기</a>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="col-lg-4">
+                            <div class="card">
+                                <img src="../img1/main/content/page1/best/04_master_thumb_hover.png" class="card-img-top" alt="product4">
+                                <div class="card-body">
+                                    <h6 class="card-title">마스터 블렌드</h6>
+                                    <p style="color: #ccc;"><del>53,000원</del></p>
+                                    <p class="card-text">39,750원</p>
+                                    <a href="./GetProductDetailCtrlproNo4.html" class="btn btn-light">제품 상세보기</a>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="col-lg-4">
+                            <div class="card">
+                                <img src="../img1/main/content/page1/best/05_premium_thumb_hover.png" class="card-img-top" alt="product5">
+                                <div class="card-body">
+                                    <h6 class="card-title">프리미엄 티 컬렉션 90입</h6>
+                                    <p class="card-text">70,000원</p>
+                                    <a href="./GetProductDetailCtrlproNo5.html" class="btn btn-light">제품 상세보기</a>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="col-lg-4">
+                            <div class="card">
+                                <img src="../img1/main/content/page1/best/06_memory_thumb.png" class="card-img-top" alt="product5">
+                                <div class="card-body">
+                                    <h6 class="card-title">메모리 인 제주 20입</h6>
+                                    <p class="card-text">38,000원</p>
+                                    <a href="./GetProductDetailCtrlproNo6.html" class="btn btn-light">제품 상세보기</a>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="col-lg-4">
+                            <div class="card">
+                                <img src="../img1/main/content/page1/best/07_fruit_thumb.png" class="card-img-top" alt="product5">
+                                <div class="card-body">
+                                    <h6 class="card-title">과일 블렌디드 티백 박스</h6>
+                                    <p class="card-text">29,500원</p>
+                                    <a href="./GetProductDetailCtrlproNo7.html" class="btn btn-light">제품 상세보기</a>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="col-lg-4">
+                            <div class="card">
+                                <img src="../img1/main/content/page1/best/08_greentea_thumb.png" class="card-img-top" alt="product5">
+                                <div class="card-body">
+                                    <h6 class="card-title">메모리 인 제주 20입</h6>
+                                    <p class="card-text">20,000원</p>
+                                    <a href="./GetProductDetailCtrlproNo8.html" class="btn btn-light">제품 상세보기</a>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="col-lg-4">
+                            <div class="card">
+                                <img src="../img1/main/content/page1/best/01_collection_thumb_hover.png" class="card-img-top" alt="product1">
+                                <div class="card-body">
+                                    <h6 class="card-title">프리미엄 티 컬렉션</h6>
+                                    <p style="color: #ccc;"><del>28,000원</del></p>
+                                    <p class="card-text">22,400원</p>
+                                    <a href="./GetProductDetailCtrlproNo1.html" class="btn btn-light">제품 상세보기</a>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="col-lg-4">
+                            <div class="card">
+                                <img src="../img1/main/content/page1/best/04_master_thumb_hover.png" class="card-img-top" alt="product4">
+                                <div class="card-body">
+                                    <h6 class="card-title">마스터 블렌드</h6>
+                                    <p style="color: #ccc;"><del>53,000원</del></p>
+                                    <p class="card-text">39,750원</p>
+                                    <a href="./GetProductDetailCtrlproNo4.html" class="btn btn-light">제품 상세보기</a>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="col-lg-4">
+                            <div class="card">
+                                <img src="../img1/main/content/page1/week_best/03_cookie_thumb_hover.png" class="card-img-top" alt="product4">
+                                <div class="card-body">
+                                    <h6 class="card-title">그린티 랑드샤</h6>
+                                    <p style="color: #ccc;"><del>13,000원</del></p>
+                                    <p class="card-text">9,100원</p>
+                                    <a href="./GetProductDetailCtrlproNo9.html" class="btn btn-light">제품 상세보기</a>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="col-lg-4">
+                            <div class="card">
+                                <img src="../img1/main/content/page1/best/02_lovely_thumb_hover.png" class="card-img-top" alt="product2">
+                                <div class="card-body">
+                                    <h6 class="card-title">러블리 티 박스</h6>
+                                    <p class="card-text">20,000원</p>
+                                    <a href="./GetProductDetailCtrlproNo2.html" class="btn btn-light">제품 상세보기</a>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
                     <!-- 상품 반복 -->
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="product__pagination">
+                                <a class="active" href="#">1</a>
+                                <a class="" href="#">2</a>
+                                <a class="" href="#">3</a>
+                                <a class="" href="#">4</a>
+                                <a class="" href="#">5</a>
+                            </div>
+                        </div>
                     </div>
                     <div class="btn-group">
                         <a href="./InsertProductCategoryCtrl.html" class="btn btn-dark">상품 등록</a>
