--- a/web02/admin/GetQnaListCtrl.html
+++ b/web02/admin/GetQnaListCtrl.html
@@ -194,7 +194,9 @@
 					</tr>
 				</thead>
 				<tbody>
-					
+					<tr>
+						<td>연번</td><td>제목</td><td>작성자</td><td>작성일</td>
+					</tr>
 				</tbody>
 			</table>
 			
@@ -267,15 +269,15 @@
     </footer>
     <!-- Footer Section End -->
 <!-- Js Plugins -->
-    <script src="/pro002/js/jquery-3.3.1.min.js"></script>
-    <script src="/pro002/js/bootstrap.min.js"></script>
-    <script src="/pro002/js/jquery.nice-select.min.js"></script>
-    <script src="/pro002/js/jquery.nicescroll.min.js"></script>
-    <script src="/pro002/js/jquery.magnific-popup.min.js"></script>
-    <script src="/pro002/js/jquery.countdown.min.js"></script>
-    <script src="/pro002/js/jquery.slicknav.js"></script>
-    <script src="/pro002/js/mixitup.min.js"></script>
-    <script src="/pro002/js/owl.carousel.min.js"></script>
-    <script src="/pro002/js/main.js"></script>
+    <script src="../js/jquery-3.3.1.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/jquery.nice-select.min.js"></script>
+    <script src="../js/jquery.nicescroll.min.js"></script>
+    <script src="../js/jquery.magnific-popup.min.js"></script>
+    <script src="../js/jquery.countdown.min.js"></script>
+    <script src="../js/jquery.slicknav.js"></script>
+    <script src="../js/mixitup.min.js"></script>
+    <script src="../js/owl.carousel.min.js"></script>
+    <script src="../js/main.js"></script>
 </body>
 </html>
