mobile application UI update

--- a/mobile01/index.html
+++ b/mobile01/index.html
@@ -686,11 +686,15 @@
             <h1 class="ui-title"></h1>
             <div role="main" class="ui-content">
                 <h2>Magazine</h2>
-                <p>Page content goes here.</p>
-
-                <a href="#page41">
-                    <h3>Product Categories</h3>
+                <p>The Vitra Magazine features an assortment of articles, images, interviews and anecdotes. It revolves around the themes of design, architecture and culture, our products and their authors, exhibitions and past events – here you can experience the many facets of Project Vitra.</p><br>
+                <h3>Product Categories</h3>
+                <a href="#page41">                   
                     <img src="./assets/img/ex1-350.jpg" alt="ex">
+                    <p>Design is a highly political profession</p>
+                </a>
+                <a href="#page42">
+                    <img src="./assets/img/ex1-350.jpg" alt="ex">
+                    <p>10 years of Tip Ton</p>
                 </a>
             </div>
         </div>
@@ -722,12 +726,14 @@
             </nav>
         </header>
         <div data-role="content" class="ui-content">
-            <h1 class="ui-title">Vitra</h1>
+            <h1 class="ui-title">Design is a highly political profession</h1>
+            <p>A talk with curator Amelie Klein</p>
+            <img src="./assets/img/detail-374.jpg" alt="title">
             <div role="main" class="ui-content">
-                <img src="./assets/img/detail-374.jpg" alt="title">
-                <h2>Standard</h2>
-                <h3>Jean Prouvé, 1934/1950</h3>
-                <p>Page content goes here.</p>
+                <h3>Ms Klein, why are you currently so angry?</h3>
+                <p>Amelie Klein: When I think of robotics, it always makes me angry. Insanely angry! And depressed.</p>
+                <h3>At the exhibition opening, you spoke of how the theme of the show made you feel depressed. In the preface to the exhibition catalogue, you wrote about your anger. Could you briefly explain this reaction?</h3>
+                <p>I always say that robotics – and by that, I also mean technology in general – is like a coat of paint that covers everything. It makes our lives much easier in many ways, and most of us still think it all comes for free. But upon closer inspection, we soon realise that none of it is free. Most of the technologies we use incessantly are backed by economic or even governmental interests. We get all agitated when another book comes out about the next form of superintelligence, but we don’t think about the fact that we are all sending our data into the ether every minute – becoming commodities ourselves and increasingly heading towards digital surveillance capitalism.</p>
             </div>
         </div>
         <footer data-role="footer" class="ui-footer" data-theme="a">
@@ -758,12 +764,14 @@
             </nav>
         </header>
         <div data-role="content" class="ui-content">
-            <h1 class="ui-title">Vitra</h1>
+            <h1 class="ui-title">10 years of Tip Ton</h1>
+            <p>In conversation with Barber & Osgerby</p>
+            <img src="./assets/img/detail-374.jpg" alt="title">
             <div role="main" class="ui-content">
-                <img src="./assets/img/detail-374.jpg" alt="title">
-                <h2>Standard</h2>
-                <h3>Jean Prouvé, 1934/1950</h3>
-                <p>Page content goes here.</p>
+                <h3>You've spoken a lot about Tip Ton over the past ten years: it’s a hugely popular chair.</h3>
+                <p>Osgerby: At the beginning we were unsure whether it would be a commercial success, although looking at it now, it feels like a very obvious thing. At the time we weren’t sure, particularly when initial prices for tools were coming in and it looked like it might be incredibly expensive to make. It’s complicated as a production piece, because it’s a one-shot form in plastic.</p>
+                <h3>The research and testing for Tip Ton took a long time. How did this compare to other projects you’ve worked on?</h3>
+                <p>Osgerby: It’s truly unlike most of our other projects. Whilst we knew what we wanted to do, we didn’t know whether it was possible. There were question marks over even really simple stuff, like the angle at which the forward tilt should be. There just wasn’t anything else like Tip Ton already out there; it was a new archetype.</p>
             </div>
         </div>
         <footer data-role="footer" class="ui-footer" data-theme="a">
