--- a/mobile01/index.html
+++ b/mobile01/index.html
@@ -127,6 +127,17 @@
       .player { min-width:960px; max-width:960px; width:auto; }
     }
     </style>
+    <!-- Hotjar Tracking Code for my site -->
+    <script>
+        (function(h,o,t,j,a,r){
+            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+            h._hjSettings={hjid:3286249,hjsv:6};
+            a=o.getElementsByTagName('head')[0];
+            r=o.createElement('script');r.async=1;
+            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+    </script>
 </head>
 <body class="ui-mobile-viewport ui-overlay-a">
     <!-- 메인 -->
@@ -687,11 +698,12 @@
             <div role="main" class="ui-content">
                 <h2>Magazine</h2>
                 <p>The Vitra Magazine features an assortment of articles, images, interviews and anecdotes. It revolves around the themes of design, architecture and culture, our products and their authors, exhibitions and past events – here you can experience the many facets of Project Vitra.</p><br>
-                <h3>Product Categories</h3>
+                <h3>Exhibitions</h3>
                 <a href="#page41">                   
                     <img src="./assets/img/ex1-350.jpg" alt="ex">
                     <p>Design is a highly political profession</p>
-                </a>
+                </a><br>
+                <h3>Designers</h3>
                 <a href="#page42">
                     <img src="./assets/img/ex1-350.jpg" alt="ex">
                     <p>10 years of Tip Ton</p>
@@ -941,14 +953,14 @@ I'm a basic textarea. If this is pre-populated with content, the height will be 
                     <tbody>
                         <tr>
                             <th class="ui-table-priority-2 ui-table-cell-visible">1</th>
-                            <td><a href="#page51" data-rel="external">Citizen Kane</a></td>
-                            <td class="ui-table-priority-3 ui-table-cell-visible">1941</td>
+                            <td><a href="#page53" data-rel="external">Delivery delay</a></td>
+                            <td class="ui-table-priority-3 ui-table-cell-visible">2022-12-14</td>
 
                         </tr>
                         <tr>
                             <th class="ui-table-priority-2 ui-table-cell-visible">2</th>
-                            <td><a href="#page51" data-rel="external">Casablanca</a></td>
-                            <td class="ui-table-priority-3 ui-table-cell-visible">1942</td>
+                            <td><a href="#page53" data-rel="external">Restock delay</a></td>
+                            <td class="ui-table-priority-3 ui-table-cell-visible">2022-11-02</td>
                         </tr>
                     </tbody>
                 </table>
@@ -1000,17 +1012,17 @@ I'm a basic textarea. If this is pre-populated with content, the height will be 
                     <tbody>
                         <tr>
                             <th>1</th>
-                            <td>Citizen Kane</td>
-                            <td>1941</td>
-                            <td>100%</td>
-                            <td>74</td>
+                            <td>Delivery delay</td>
+                            <td>Due to heavy snow, the delivery will be delayed for up to 7 days.</td>
+                            <td>Nora Fehlbaum</td>
+                            <td>2022-12-14</td>
                         </tr>
                     </tbody>
                 </table>
             </div>
             <div class="ui-btn-group">
                 <a href="#page5"><button class="ui-btn ui-btn-inline">삭제</button></a>
-                <a href="#page53"><button class="ui-btn ui-btn-inline">수정</button></a>
+                <a href="#page52"><button class="ui-btn ui-btn-inline">수정</button></a>
             </div>
         </div>
         <footer data-role="footer" class="ui-footer" data-theme="a">
